tests/samples/negative/resources/move_defer_exit_after_return.ax
module move_defer_exit_after_return;

fn consume[T](value: T) -> void {
}

fn duplicate[T](value: T) -> T {
    defer consume(value);
    return value;
}

fn main() -> i32 {
    return 0;
}
